<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/modernloginActivity"
    android:background="@color/maroonColor"
    >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:id="@+id/avatarImageView"
        android:layout_marginTop="30dp"
        android:src="@drawable/ic_launcher_foreground">
    </ImageView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/userInfoTextView"
        android:layout_below="@id/avatarImageView"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:text="@string/userInfo"
        android:textColor="@color/brokenWhite"
        android:textSize="20dp"
        >
    </TextView>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/emailEditText"
        android:layout_below="@id/userInfoTextView"
        android:layout_marginTop="35dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/hintEmail"
        android:textColorHint="@color/lightPink"
        android:textSize="24sp"
        >
    </EditText>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/passwordEditText"
        android:layout_below="@id/emailEditText"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/hintPass"
        android:textColorHint="@color/lightPink"
        android:textSize="24sp"
        >
    </EditText>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/loginButton"
        android:layout_below="@id/passwordEditText"
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/loginText"
        android:background="@color/brokenWhite"
        >
    </Button>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/questionTextView"
        android:layout_below="@id/loginButton"
        android:layout_marginTop="25dp"
        android:layout_marginStart="100dp"
        android:text="@string/newAccountQuestion"
        android:textColor="@color/brokenWhite"
        android:textSize="18sp"
        >
    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/registerTextView"
        android:layout_below="@id/loginButton"
        android:layout_marginTop="25dp"
        android:layout_marginStart="5dp"
        android:layout_toRightOf="@id/questionTextView"
        android:text="@string/registerText"
        android:textColor="@color/brokenWhite"
        android:textSize="18sp"
        android:textStyle="bold"
        >
    </TextView>

</RelativeLayout>