<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/basicGridActivity"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/box1Textview"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:gravity="center"
        android:text="@string/box1_text"
        android:textSize="42sp"
        android:textStyle="bold"
        android:background="@color/lightPurple"
        >
    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/box2Textview"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:gravity="center"
        android:text="@string/box2_text"
        android:textSize="42sp"
        android:textStyle="bold"
        android:background="@color/pastelViolet"
        >
    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/box3Textview"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:gravity="center"
        android:text="@string/box3_text"
        android:textSize="42sp"
        android:textStyle="bold"
        android:background="@color/cottonCandy"
        >
    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/box4Textview"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:gravity="center"
        android:text="@string/box4_text"
        android:textSize="42sp"
        android:textStyle="bold"
        android:background="@color/lumberColor"
        >
    </TextView>

</GridLayout>