<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/colorsActivity"
    android:layout_marginRight="20dp"
    android:layout_marginLeft="20dp"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/successTextView"
        android:text="@string/successMessage"
        android:textSize="26sp"
        android:textColor="@color/greenTeaColor"
        >
    </TextView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@id/successTextView"
        android:layout_centerHorizontal="true"
        android:id="@+id/warningTextView"
        android:text="@string/warningMessage"
        android:textSize="26sp"
        android:textColor="@color/yellowMayoColor"
        >
    </TextView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@id/warningTextView"
        android:layout_centerHorizontal="true"
        android:id="@+id/alertTextView"
        android:text="@string/alertMessage"
        android:textSize="26sp"
        android:textColor="@color/redChilliColor"
        >
    </TextView>
</RelativeLayout>