<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scoreBoardActivity"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/titleTextview"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:gravity="center"
        android:text="@string/titleText"
        android:textSize="58sp"
        android:textStyle="bold"
        android:textColor="@color/whiteColor"
        android:background="@color/darkgreen"
        >
    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/team1ScoreTextview"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:gravity="center"
        android:text="@string/scoreTeam1_Text"
        android:textSize="120sp"
        android:textStyle="bold"
        android:textColor="@color/blueColor"
        >
    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/team2ScoreTextview"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:gravity="center"
        android:text="@string/scoreTeam2_Text"
        android:textSize="120sp"
        android:textStyle="bold"
        android:textColor="@color/redColor"
        >
    </TextView>
</GridLayout>