<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/eBookStoreActivity"
    >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:id="@+id/bennerImageView"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/aladin_benner"
        >
    </ImageView>

    <ImageView
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:id="@+id/posterImageView"
        android:layout_marginTop="144dp"
        android:layout_marginEnd="240dp"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/aladin_poster"
        >
    </ImageView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/titleTextView"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        android:text="@string/title"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/posterImageView"
        app:layout_constraintTop_toBottomOf="@id/bennerImageView"
        >
    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/publisherTextView"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:text="@string/publisher"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/posterImageView"
        app:layout_constraintTop_toBottomOf="@id/titleTextView"
        >
    </TextView>

    <Button
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:text="@string/sample_button"
        android:id="@+id/sampleButton"
        android:layout_marginTop="18dp"
        android:layout_marginStart="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/posterImageView"
        app:layout_constraintEnd_toStartOf="@id/buyButton"
        app:layout_constraintBottom_toTopOf="@id/divider"
        >
    </Button>

    <Button
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:text="@string/buy_button"
        android:id="@+id/buyButton"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="28dp"
        android:background="@color/navy"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/posterImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/sampleButton"
        app:layout_constraintBottom_toTopOf="@id/divider"
        >
    </Button>

    <View
        android:layout_width="380dp"
        android:layout_height="2dp"
        android:id="@+id/divider"
        android:layout_marginTop="20dp"
        android:background="@color/cream"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sampleButton"
        >
    </View>

    <TextView
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:id="@+id/descriptionTextView"
        android:text="@string/description_book"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
    </TextView>

</androidx.constraintlayout.widget.ConstraintLayout>