<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginRight="10dp"
    android:layout_marginLeft="10dp"
    android:id="@+id/photoSharingActivity"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/titleTextview"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_marginTop="10dp"
        android:text="@string/titleText"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="@color/blackOlive"
        >
    </TextView>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="350dp"
        android:id="@+id/imageDisplay"
        android:layout_marginTop="10dp"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_rowWeight="1"
        android:scaleType="fitXY"
        android:src="@drawable/lampuuk_beach"
        >
    </ImageView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/saveButton"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:text="@string/saveButtonText"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/whiteColor"
        android:background="@color/blackOlive"
        >
    </Button>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/shareButton"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:text="@string/shareButtonText"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/whiteColor"
        android:background="@color/redMate"
        >
    </Button>
</GridLayout>